fix: spacing

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -575,7 +575,9 @@ a.image:hover {
 p.caption {
 	padding: 10px 40px 0 0;
 	line-height: 1.4;
+	margin-bottom: 10px;
 }
+
 p.link {
 	padding-bottom: 10px;
 }
@@ -692,6 +694,7 @@ footer {
 		font-size: 28px;
 		line-height: 34px;
 		max-width: 900px;
+		padding-top: 40px;
 		padding-bottom: 20px;
 	}
 	.home h2 {
